--- a/packages/i18n/locales/ko/messages.json
+++ b/packages/i18n/locales/ko/messages.json
@@ -1,11 +1,11 @@
 {
 	"extensionDescription": {
 		"description": "Extension description",
-		"message": "React, Typescript, Vite를 사용한 크롬 익스텐션 보일러플레이트입니다."
+		"message": "네트워크 요청에서 인증 토큰을 검사하고 관리합니다."
 	},
 	"extensionName": {
 		"description": "Extension name",
-		"message": "크롬 익스텐션 보일러플레이트"
+		"message": "WhatsMyToken"
 	},
 	"toggleTheme": {
 		"message": "테마 변경"
